<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_title_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_title"
        android:imeOptions="actionDone"
        android:inputType="textImeMultiLine"
        android:hint="@string/item_title_hint"/>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <Button android:id="@+id/done_adding_items"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/done_adding_items"/>
        <Button android:id="@+id/item_add_another"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_add_another"/>
    </LinearLayout>

</LinearLayout>